WIP: [REF] git_ui, prompt_store: Move commit message prompt to prompt_store
This commit refactors how the commit message prompt is managed and loaded within Zed.
Previously, the prompt was a static text file (`commit_message_prompt.txt`) directly
embedded within the `git_ui` crate. This approach made it difficult to dynamically
manage or update prompts, and it tightly coupled the prompt content to the `git_ui` crate.

To improve flexibility and maintainability, the commit message prompt has been
migrated to the `prompt_store` crate. This involves:
- Deleting the old `commit_message_prompt.txt` file.
- Introducing a new Handlebars template (`commit_message_prompt.hbs`) in `assets/prompts`
  to store the prompt content.
- Integrating the `prompt_store` crate into `git_ui` to handle the loading and
  rendering of this template.
- Adding a new function `generate_commit_message_assisant_prompt` in `prompt_store`
  to specifically render the commit message prompt.

This change centralizes prompt management, allowing for easier updates and potential
future enhancements like dynamic prompt generation or localization, without requiring
changes to the core `git_ui` logic. It also aligns with a more structured approach
to managing application-wide prompts.

Signed-off-by: Damian Ziemba <nazriel@dzfl.pl>

--- a/crates/git_ui/Cargo.toml
+++ b/crates/git_ui/Cargo.toml
@@ -45,6 +45,7 @@ panel.workspace = true
 picker.workspace = true
 postage.workspace = true
 project.workspace = true
+prompt_store.workspace = true
 schemars.workspace = true
 serde.workspace = true
 serde_derive.workspace = true
